--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,75 +1,88 @@
-body,
-html {
-  height: 100%;
-  margin: 0;
+body {
+  background: linear-gradient(135deg, #fafafa, #aeaeae);
+  height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
-  font-family: "Arial", sans-serif;
+  margin: 0;
 }
-.loginContainer {
-  text-align: center;
+
+.login {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  background: #dfd1d1;
+  width: 434px;
+  padding: 20px;
+  border-radius: 22px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+h4 {
+  font-family: "Segoe UI", bold;
+  font-size: 35px;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
+form {
+  display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #ffffff;
-  padding: 40px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border: 2px solid #007bff;
-}
-
-.loginTitle {
-  color: rgb(72, 72, 72);
-  font-size: 30px;
-  font-weight: bold;
-  font-size: 30px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-.loginFormContainer {
-  border-radius: 10px;
-  border-width: 1px;
-  border-color: black;
-  border-style: solid;
-  background-color: white;
-}
-
-.loginBtn {
-  margin-top: 20px;
   width: 100%;
-  height: 40px;
-  font-size: 15px;
-  font-weight: bold;
-  color: white;
-  background-color: #ff6f00;
+}
+.text_area {
+  align-content: center;
+  border-radius: 22px;
+  margin-bottom: 35px;
+  width: 100%;
+  height: 200px;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2),
+    0 0 40px 0 rgba(213, 202, 202, 0.19);
 }
 
-.p {
-  color: rgb(48, 48, 48);
-  font-weight: bold;
-  font-size: 13px;
+.text_input {
+  margin-top: 1.2rem;
+  margin-left: 1.5rem;
+  margin-bottom: 0.5rem;
+  border-radius: 22px;
+  font-family: "Montserrat regular";
+  font-size: 20px;
+  border: none;
+  width: 80%;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2),
+    0 0 40px 0 rgba(213, 202, 202, 0.19);
 }
 
-.error {
-  margin-top: 10px;
+.title {
+  margin-left: 0.5rem;
+  font-family: "Montserrat";
+  font-size: 17px;
+  margin-bottom: 10px;
 }
 
-.form {
-  padding-left: 0;
-  padding-right: 0;
+.btn {
+  margin-top: 28px;
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
+  background: #7f7272;
+  border: none;
+  font-family: "Montserrat";
+  font-size: 20px;
+  color: #ffffff;
+  box-shadow: 0 4px 8px 0 #6a5f5eb3, 0 6px 20px 0 #595959e6;
+  cursor: pointer;
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
-}
-
-#root {
-  height: 100%;
+.link {
+  color: #0e4579;
+  font-family: "Montserrat light";
+  font-size: 18px;
+  cursor: pointer;
+  display: block;
+  text-decoration: none;
 }
